--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.12.0",
     "babel-polyfill": "^6.7.4",
     "bootstrap": "^4.0.0-alpha.2",
     "chalk": "^1.1.3",
@@ -163,12 +164,15 @@
     "history": "^2.1.0",
     "immutable": "^3.8.1",
     "react": "^15.0.1",
+    "react-addons-css-transition-group": "^15.1.0",
+    "react-addons-shallow-compare": "^15.1.0",
     "react-dom": "^15.0.1",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
     "react-router-redux": "^4.0.4",
     "react-router-scroll": "^0.2.0",
+    "react-selectize": "^2.0.2",
     "redux": "^3.5.2",
     "redux-immutable": "^3.0.6",
     "redux-saga": "^0.10.0",
