--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "react-addons-css-transition-group": "^15.1.0",
     "react-addons-shallow-compare": "^15.1.0",
     "react-dom": "^15.0.1",
+    "react-dropzone": "^3.5.1",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
